# htmx-examples-with-flask

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
blueprints/: active_search.py  animations.py  bulk_update.py  click_to_edit.py  click_to_load.py  confirm.py  delete_row.py  dialogs_bootstrap.py  dialogs_browser.py  dialogs_custom.py  dialogs_uikit.py  edit_row.py  file_upload.py  infinite_scroll.py  inline_validation.py  keyboard_shortcuts.py  lazy_loading.py  preserving_file_inputs.py  progress_bar.py  sortable.py  tabs_hateoas.py  tabs_hyperscript.py  updating_other_content.py  value_select.py
examples/: app.py
examples/blueprints/: active_search.py  animations.py  bulk_update.py  click_to_edit.py  click_to_load.py  confirm.py  delete_row.py  dialogs_bootstrap.py  dialogs_browser.py  dialogs_custom.py  dialogs_uikit.py  edit_row.py  file_upload.py  infinite_scroll.py  inline_validation.py  keyboard_shortcuts.py  lazy_loading.py  preserving_file_inputs.py  progress_bar.py  sortable.py  tabs_hateoas.py  tabs_hyperscript.py  updating_other_content.py  value_select.py
examples/templates/: base.html.j2  index.html.j2
src/: app.py
src/active_search/: main.py
src/animations/: main.py
src/bulk_update/: main.py
src/click_to_edit/: main.py
src/click_to_load/: main.py
src/confirm/: main.py
src/delete_row/: main.py
src/dialogs_bootstrap/: main.py
src/dialogs_browser/: main.py
src/dialogs_custom/: main.py
src/dialogs_uikit/: main.py
src/edit_row/: main.py
src/file_upload/: main.py
src/infinite_scroll/: main.py
src/inline_validation/: main.py  partial_valid.html.j2
src/keyboard_shortcuts/: main.py
src/lazy_loading/: main.py
src/preserving_file_inputs/: main.py
src/progress_bar/: main.py
src/sortable/: main.py
src/tabs_hateoas/: main.py
src/tabs_hyperscript/: main.py
src/templates/: index.html.j2
src/updating_other_content/: main.py
src/value_select/: main.py
templates/: base.html.j2  index.html.j2
templates/active_search/: index.html.j2  search_results.html.j2
templates/animations/: class_tools.html.j2  color_swap.html.j2  fade_in_on_addition.html.j2  fade_out_on_swap.html.j2  in_flight_animation.html.j2  index.html.j2  view_transition_initial.html.j2  view_transition_new.html.j2
templates/bulk_update/: index.html.j2
templates/click_to_edit/: edit.html.j2  index.html.j2
templates/click_to_load/: index.html.j2  partial.html.j2
templates/confirm/: index.html.j2
(+162 files in other folders)
