[project]
name = "htmx-examples-with-flask"
version = "0.1.0"
description = "An implementation of the htmx examples."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "flask>=3.1.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "djlint>=1.36.4",
    "isort>=6.0.1",
    "ruff>=0.9.7",
]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.djlint]
profile="jinja"
